Fixed body overflow in mobile layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     max-width: 1140px;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 ul {
